# libbmb

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: static.yml
docs/html/: annotated.html  annotated_dup.js  classes.html  conceptbmb_1_1ConstructibleFrom.html  conceptbmb_1_1CopyAssignable.html  conceptbmb_1_1CopyConstructible.html  conceptbmb_1_1DefaultConstructible.html  conceptbmb_1_1MoveAssignable.html  conceptbmb_1_1MoveConstructible.html  conceptbmb_1_1NothrowConstructibleFrom.html  conceptbmb_1_1NothrowCopyAssignable.html  conceptbmb_1_1NothrowCopyConstructible.html  conceptbmb_1_1NothrowMoveAssignable.html  conceptbmb_1_1NothrowMoveConstructible.html  conceptbmb_1_1SameAs.html  conceptbmb_1_1detail_1_1SameHelper.html  concepts.html  concepts.js  concepts_8h_source.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_821002d4f10779a80d4fb17bc32f21f1.js  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  hierarchy.html  hierarchy.js  index.html  move_8h.html  move_8h.js  move_8h_source.html  navtreedata.js  navtreeindex0.js  structbmb_1_1integral__constant-members.html  structbmb_1_1integral__constant.html  structbmb_1_1is__class.html  structbmb_1_1is__const-members.html  structbmb_1_1is__const.html  structbmb_1_1is__const_3_01const_01T_01_4-members.html  structbmb_1_1is__const_3_01const_01T_01_4.html  structbmb_1_1is__lvalue__ref-members.html  (+30 more)
docs/latex/: annotated.tex  conceptbmb_1_1ConstructibleFrom.tex  conceptbmb_1_1CopyAssignable.tex  conceptbmb_1_1CopyConstructible.tex  concepts.tex  (+46 more)
(+31 files in other folders)
